...
            <Container>
              {messages.data &&
                messages.data.length === 0 &&
                messages.status === 'complete' && (
                  <Container padding background={'secondary'}>
                    <Text bold type={Constants.TextTypes.H3}>
                      Hey there,
                    </Text>
                    <Container marginBottom marginTop={5}>
                      <Text type={Constants.TextTypes.Body}>
                        It looks like you are new here? You can start by issuing
                        yourself a<Text bold> name </Text>
                        credential!
                      </Text>
                    </Container>
                    <Button
                      fullWidth
                      buttonText={'Get started'}
                      onPress={() => showFirstLoadModal()}
                      type={Constants.BrandOptions.Primary}
                      block={Constants.ButtonBlocks.Outlined}
                    />
                  </Container>
                )}
...
