...
)

const ProfileNavigator = createStackNavigator({
  [Screens.ViewerProfile.screen]: {
    screen: ViewerProfile,
    navigationOptions: {
      title: i18n.t('My Profile'),
    },
  },
})

const ActivityNavigator = createStackNavigator(
  {
...
